--- a/src/Test/EInk4in2Test1/EInk4in2Test1.ioc
+++ b/src/Test/EInk4in2Test1/EInk4in2Test1.ioc
@@ -14,25 +14,26 @@ Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PA15
-Mcu.Pin15=PD2
-Mcu.Pin16=PB3
-Mcu.Pin17=PB4
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_HID_FS
-Mcu.Pin2=PA1
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA7
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=20
+Mcu.Pin10=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PA15
+Mcu.Pin16=PD2
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_HID_FS
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA7
+Mcu.Pin9=PA9
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RETx
@@ -40,6 +41,7 @@ MxCube.Version=4.26.1
 MxDb.Version=DB.4.0.261
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:true\:true\:1\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -50,6 +52,8 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
@@ -146,6 +150,8 @@ RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=48000000
 RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=18.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_1LINE
