--- a/src/FlightComputer/FlightComputer.ioc
+++ b/src/FlightComputer/FlightComputer.ioc
@@ -7,8 +7,8 @@ ADC1.OffsetSignedSaturation-1\#ChannelRegularConversion=DISABLE
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
-CortexM4.IPs=CORTEX_M4\:I,DEBUG,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,I2C1\:I,SPI2\:I,USART2\:I,USART3\:I
-CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,FMC\:I,I2C2\:I,SPI1\:I,QUADSPI\:I,USB_OTG_FS\:I,USB_OTG_HS\:I,USART6\:I,ADC1\:I
+CortexM4.IPs=CORTEX_M4\:I,DEBUG,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,I2C1\:I,SPI2\:I,USART2\:I,USART3\:I,USART1
+CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,FMC\:I,I2C2\:I,SPI1\:I,QUADSPI\:I,USB_OTG_FS\:I,USB_OTG_HS\:I,USART6\:I,ADC1\:I,USART1\:I
 File.Version=6
 GPIO.groupedBy=
 I2C1.IPParameters=Timing
@@ -27,11 +27,13 @@ Mcu.IP11=SPI1
 Mcu.IP12=SPI2
 Mcu.IP13=SYS
 Mcu.IP14=SYS_M4
-Mcu.IP15=USART3
-Mcu.IP16=USART6
-Mcu.IP17=USB_OTG_FS
-Mcu.IP18=USB_OTG_HS
+Mcu.IP15=USART1
+Mcu.IP16=USART2
+Mcu.IP17=USART3
+Mcu.IP18=USART6
+Mcu.IP19=USB_OTG_FS
 Mcu.IP2=CORTEX_M7
+Mcu.IP20=USB_OTG_HS
 Mcu.IP3=DEBUG
 Mcu.IP4=FMC
 Mcu.IP5=I2C1
@@ -39,29 +41,30 @@ Mcu.IP6=I2C2
 Mcu.IP7=NVIC1
 Mcu.IP8=NVIC2
 Mcu.IP9=QUADSPI
-Mcu.IPNb=19
+Mcu.IPNb=21
 Mcu.Name=STM32H745IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 Mcu.Pin10=PF2
-Mcu.Pin100=PG11
-Mcu.Pin101=PG12
-Mcu.Pin102=PG13
-Mcu.Pin103=PG14
-Mcu.Pin104=PG15
-Mcu.Pin105=PB3 (JTDO/TRACESWO)
-Mcu.Pin106=PB4 (NJTRST)
-Mcu.Pin107=PB5
-Mcu.Pin108=PB6
-Mcu.Pin109=PB7
+Mcu.Pin100=PG10
+Mcu.Pin101=PG11
+Mcu.Pin102=PG12
+Mcu.Pin103=PG13
+Mcu.Pin104=PG14
+Mcu.Pin105=PG15
+Mcu.Pin106=PB3 (JTDO/TRACESWO)
+Mcu.Pin107=PB4 (NJTRST)
+Mcu.Pin108=PB5
+Mcu.Pin109=PB6
 Mcu.Pin11=PF3
-Mcu.Pin110=PB8
-Mcu.Pin111=PB9
-Mcu.Pin112=PE0
-Mcu.Pin113=PE1
-Mcu.Pin114=VP_SYS_VS_Systick
-Mcu.Pin115=VP_SYS_M4_VS_Systick
+Mcu.Pin110=PB7
+Mcu.Pin111=PB8
+Mcu.Pin112=PB9
+Mcu.Pin113=PE0
+Mcu.Pin114=PE1
+Mcu.Pin115=VP_SYS_VS_Systick
+Mcu.Pin116=VP_SYS_M4_VS_Systick
 Mcu.Pin12=PF4
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
@@ -75,90 +78,90 @@ Mcu.Pin20=PH1-OSC_OUT (PH1)
 Mcu.Pin21=PC0
 Mcu.Pin22=PC1
 Mcu.Pin23=PC2_C
-Mcu.Pin24=PA3
-Mcu.Pin25=PA4
-Mcu.Pin26=PA5
-Mcu.Pin27=PA6
-Mcu.Pin28=PA7
-Mcu.Pin29=PC4
+Mcu.Pin24=PA2
+Mcu.Pin25=PA3
+Mcu.Pin26=PA4
+Mcu.Pin27=PA5
+Mcu.Pin28=PA6
+Mcu.Pin29=PA7
 Mcu.Pin3=PE5
-Mcu.Pin30=PC5
-Mcu.Pin31=PB0
-Mcu.Pin32=PF11
-Mcu.Pin33=PF12
-Mcu.Pin34=PF13
-Mcu.Pin35=PF14
-Mcu.Pin36=PF15
-Mcu.Pin37=PG0
-Mcu.Pin38=PG1
-Mcu.Pin39=PE7
+Mcu.Pin30=PC4
+Mcu.Pin31=PC5
+Mcu.Pin32=PB0
+Mcu.Pin33=PF11
+Mcu.Pin34=PF12
+Mcu.Pin35=PF13
+Mcu.Pin36=PF14
+Mcu.Pin37=PF15
+Mcu.Pin38=PG0
+Mcu.Pin39=PG1
 Mcu.Pin4=PE6
-Mcu.Pin40=PE8
-Mcu.Pin41=PE9
-Mcu.Pin42=PE10
-Mcu.Pin43=PE11
-Mcu.Pin44=PE12
-Mcu.Pin45=PE13
-Mcu.Pin46=PE14
-Mcu.Pin47=PE15
-Mcu.Pin48=PB10
-Mcu.Pin49=PB11
+Mcu.Pin40=PE7
+Mcu.Pin41=PE8
+Mcu.Pin42=PE9
+Mcu.Pin43=PE10
+Mcu.Pin44=PE11
+Mcu.Pin45=PE12
+Mcu.Pin46=PE13
+Mcu.Pin47=PE14
+Mcu.Pin48=PE15
+Mcu.Pin49=PB10
 Mcu.Pin5=PC13
-Mcu.Pin50=PB12
-Mcu.Pin51=PB13
-Mcu.Pin52=PB14
-Mcu.Pin53=PB15
-Mcu.Pin54=PD8
-Mcu.Pin55=PD9
-Mcu.Pin56=PD10
-Mcu.Pin57=PD11
-Mcu.Pin58=PD12
-Mcu.Pin59=PD13
+Mcu.Pin50=PB11
+Mcu.Pin51=PB12
+Mcu.Pin52=PB13
+Mcu.Pin53=PB14
+Mcu.Pin54=PB15
+Mcu.Pin55=PD8
+Mcu.Pin56=PD9
+Mcu.Pin57=PD10
+Mcu.Pin58=PD11
+Mcu.Pin59=PD12
 Mcu.Pin6=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin60=PD14
-Mcu.Pin61=PD15
-Mcu.Pin62=PJ8
-Mcu.Pin63=PJ9
-Mcu.Pin64=PJ10
-Mcu.Pin65=PJ11
-Mcu.Pin66=PK0
-Mcu.Pin67=PK1
-Mcu.Pin68=PK2
-Mcu.Pin69=PG2
+Mcu.Pin60=PD13
+Mcu.Pin61=PD14
+Mcu.Pin62=PD15
+Mcu.Pin63=PJ8
+Mcu.Pin64=PJ9
+Mcu.Pin65=PJ10
+Mcu.Pin66=PJ11
+Mcu.Pin67=PK0
+Mcu.Pin68=PK1
+Mcu.Pin69=PK2
 Mcu.Pin7=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin70=PG3
-Mcu.Pin71=PG4
-Mcu.Pin72=PG5
-Mcu.Pin73=PG6
-Mcu.Pin74=PG7
-Mcu.Pin75=PG8
-Mcu.Pin76=PC6
-Mcu.Pin77=PC7
-Mcu.Pin78=PC8
-Mcu.Pin79=PC9
+Mcu.Pin70=PG2
+Mcu.Pin71=PG3
+Mcu.Pin72=PG4
+Mcu.Pin73=PG5
+Mcu.Pin74=PG6
+Mcu.Pin75=PG7
+Mcu.Pin76=PG8
+Mcu.Pin77=PC6
+Mcu.Pin78=PC7
+Mcu.Pin79=PC8
 Mcu.Pin8=PF0
-Mcu.Pin80=PA8
-Mcu.Pin81=PA9
-Mcu.Pin82=PA10
-Mcu.Pin83=PA11
-Mcu.Pin84=PA12
-Mcu.Pin85=PA13 (JTMS/SWDIO)
-Mcu.Pin86=PA14 (JTCK/SWCLK)
-Mcu.Pin87=PA15 (JTDI)
-Mcu.Pin88=PC10
-Mcu.Pin89=PC11
+Mcu.Pin80=PC9
+Mcu.Pin81=PA8
+Mcu.Pin82=PA9
+Mcu.Pin83=PA10
+Mcu.Pin84=PA11
+Mcu.Pin85=PA12
+Mcu.Pin86=PA13 (JTMS/SWDIO)
+Mcu.Pin87=PA14 (JTCK/SWCLK)
+Mcu.Pin88=PA15 (JTDI)
+Mcu.Pin89=PC10
 Mcu.Pin9=PF1
-Mcu.Pin90=PC12
-Mcu.Pin91=PD0
-Mcu.Pin92=PD1
-Mcu.Pin93=PD2
-Mcu.Pin94=PD3
-Mcu.Pin95=PD4
-Mcu.Pin96=PD5
-Mcu.Pin97=PD6
-Mcu.Pin98=PG9
-Mcu.Pin99=PG10
-Mcu.PinsNb=116
+Mcu.Pin90=PC11
+Mcu.Pin91=PC12
+Mcu.Pin92=PD0
+Mcu.Pin93=PD1
+Mcu.Pin94=PD2
+Mcu.Pin95=PD3
+Mcu.Pin96=PD4
+Mcu.Pin97=PD5
+Mcu.Pin98=PD6
+Mcu.Pin99=PG9
+Mcu.PinsNb=117
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745IITx
@@ -187,9 +190,9 @@ NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA10.GPIOParameters=PinAttribute
-PA10.Locked=true
-PA10.PinAttribute=Free
-PA10.Signal=GPIO_Input
+PA10.Mode=Asynchronous
+PA10.PinAttribute=CortexM7
+PA10.Signal=USART1_RX
 PA11.GPIOParameters=PinAttribute
 PA11.Mode=Device_Only
 PA11.PinAttribute=CortexM7
@@ -210,8 +213,13 @@ PA15\ (JTDI).GPIOParameters=PinAttribute
 PA15\ (JTDI).Mode=JTAG_5_pins
 PA15\ (JTDI).PinAttribute=CortexM7
 PA15\ (JTDI).Signal=DEBUG_JTDI
+PA2.GPIOParameters=PinAttribute
+PA2.Mode=Asynchronous
+PA2.PinAttribute=CortexM4
+PA2.Signal=USART2_TX
 PA3.GPIOParameters=PinAttribute
 PA3.Locked=true
+PA3.Mode=Asynchronous
 PA3.PinAttribute=CortexM4
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=PinAttribute
@@ -237,9 +245,9 @@ PA8.Locked=true
 PA8.PinAttribute=Free
 PA8.Signal=GPIO_Input
 PA9.GPIOParameters=PinAttribute
-PA9.Mode=Activate_VBUS
+PA9.Mode=Asynchronous
 PA9.PinAttribute=CortexM7
-PA9.Signal=USB_OTG_FS_VBUS
+PA9.Signal=USART1_TX
 PB0.GPIOParameters=PinAttribute
 PB0.PinAttribute=CortexM7
 PB0.Signal=ADCx_INP9
@@ -637,7 +645,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART6_UART_Init-USART6-false-HAL-true-CortexM7,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true-CortexM7,9-MX_USB_OTG_HS_HCD_Init-USB_OTG_HS-false-HAL-true-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_I2C1_Init-I2C1-false-HAL-true-CortexM4,3-MX_SPI2_Init-SPI2-false-HAL-true-CortexM4,4-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM4,5-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART6_UART_Init-USART6-false-HAL-true-CortexM7,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true-CortexM7,9-MX_USB_OTG_HS_HCD_Init-USB_OTG_HS-false-HAL-true-CortexM7,10-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_I2C1_Init-I2C1-false-HAL-true-CortexM4,3-MX_SPI2_Init-SPI2-false-HAL-true-CortexM4,4-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_CLKP
 RCC.ADCFreq_Value=64000000
 RCC.AHB12Freq_Value=240000000
@@ -808,18 +816,22 @@ SH.FMC_SDNRAS.ConfNb=1
 SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 SH.FMC_SDNWE.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=120.0 MBits/s
+SPI1.CalculateBaudRate=30.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,VirtualNSS
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI2.CalculateBaudRate=120.0 MBits/s
+SPI2.CalculateBaudRate=30.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART6.IPParameters=VirtualMode-Asynchronous
