--- a/src/FlightComputer/FlightComputer.ioc
+++ b/src/FlightComputer/FlightComputer.ioc
@@ -47,24 +47,25 @@ Mcu.Package=LQFP176
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 Mcu.Pin10=PF2
-Mcu.Pin100=PG10
-Mcu.Pin101=PG11
-Mcu.Pin102=PG12
-Mcu.Pin103=PG13
-Mcu.Pin104=PG14
-Mcu.Pin105=PG15
-Mcu.Pin106=PB3 (JTDO/TRACESWO)
-Mcu.Pin107=PB4 (NJTRST)
-Mcu.Pin108=PB5
-Mcu.Pin109=PB6
+Mcu.Pin100=PG9
+Mcu.Pin101=PG10
+Mcu.Pin102=PG11
+Mcu.Pin103=PG12
+Mcu.Pin104=PG13
+Mcu.Pin105=PG14
+Mcu.Pin106=PG15
+Mcu.Pin107=PB3 (JTDO/TRACESWO)
+Mcu.Pin108=PB4 (NJTRST)
+Mcu.Pin109=PB5
 Mcu.Pin11=PF3
-Mcu.Pin110=PB7
-Mcu.Pin111=PB8
-Mcu.Pin112=PB9
-Mcu.Pin113=PE0
-Mcu.Pin114=PE1
-Mcu.Pin115=VP_SYS_VS_Systick
-Mcu.Pin116=VP_SYS_M4_VS_Systick
+Mcu.Pin110=PB6
+Mcu.Pin111=PB7
+Mcu.Pin112=PB8
+Mcu.Pin113=PB9
+Mcu.Pin114=PE0
+Mcu.Pin115=PE1
+Mcu.Pin116=VP_SYS_VS_Systick
+Mcu.Pin117=VP_SYS_M4_VS_Systick
 Mcu.Pin12=PF4
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
@@ -160,8 +161,8 @@ Mcu.Pin95=PD3
 Mcu.Pin96=PD4
 Mcu.Pin97=PD5
 Mcu.Pin98=PD6
-Mcu.Pin99=PG9
-Mcu.PinsNb=117
+Mcu.Pin99=PD7
+Mcu.PinsNb=118
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745IITx
@@ -409,6 +410,10 @@ PD6.GPIOParameters=PinAttribute
 PD6.Locked=true
 PD6.PinAttribute=Free
 PD6.Signal=GPIO_Output
+PD7.GPIOParameters=PinAttribute
+PD7.Locked=true
+PD7.PinAttribute=Free
+PD7.Signal=GPIO_Output
 PD8.GPIOParameters=PinAttribute
 PD8.PinAttribute=CortexM7
 PD8.Signal=FMC_D13_DA13
@@ -552,9 +557,8 @@ PG15.GPIOParameters=PinAttribute
 PG15.PinAttribute=CortexM7
 PG15.Signal=FMC_SDNCAS
 PG2.GPIOParameters=PinAttribute
-PG2.Locked=true
-PG2.PinAttribute=Free
-PG2.Signal=GPIO_Output
+PG2.PinAttribute=CortexM7
+PG2.Signal=FMC_A12
 PG3.GPIOParameters=PinAttribute
 PG3.Locked=true
 PG3.PinAttribute=Free
@@ -645,7 +649,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART6_UART_Init-USART6-false-HAL-true-CortexM7,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true-CortexM7,9-MX_USB_OTG_HS_HCD_Init-USB_OTG_HS-false-HAL-true-CortexM7,10-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_I2C1_Init-I2C1-false-HAL-true-CortexM4,3-MX_SPI2_Init-SPI2-false-HAL-true-CortexM4,4-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART6_UART_Init-USART6-false-HAL-true-CortexM7,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true-CortexM7,9-MX_USB_OTG_HS_HCD_Init-USB_OTG_HS-false-HAL-true-CortexM7,10-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,11-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_I2C1_Init-I2C1-false-HAL-true-CortexM4,3-MX_SPI2_Init-SPI2-false-HAL-true-CortexM4,4-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM4,5-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,6-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_CLKP
 RCC.ADCFreq_Value=64000000
 RCC.AHB12Freq_Value=240000000
@@ -743,33 +747,35 @@ RCC.VCOInput2Freq_Value=5000000
 RCC.VCOInput3Freq_Value=5000000
 SH.ADCx_INP9.0=ADC1_INP9,IN9-Single-Ended
 SH.ADCx_INP9.ConfNb=1
-SH.FMC_A0.0=FMC_A0,12b-sda1
+SH.FMC_A0.0=FMC_A0,13b-sda1
 SH.FMC_A0.ConfNb=1
-SH.FMC_A1.0=FMC_A1,12b-sda1
+SH.FMC_A1.0=FMC_A1,13b-sda1
 SH.FMC_A1.ConfNb=1
-SH.FMC_A10.0=FMC_A10,12b-sda1
+SH.FMC_A10.0=FMC_A10,13b-sda1
 SH.FMC_A10.ConfNb=1
-SH.FMC_A11.0=FMC_A11,12b-sda1
+SH.FMC_A11.0=FMC_A11,13b-sda1
 SH.FMC_A11.ConfNb=1
+SH.FMC_A12.0=FMC_A12,13b-sda1
+SH.FMC_A12.ConfNb=1
 SH.FMC_A14_BA0.0=FMC_BA0,FourSdramBanks1
 SH.FMC_A14_BA0.ConfNb=1
 SH.FMC_A15_BA1.0=FMC_BA1,FourSdramBanks1
 SH.FMC_A15_BA1.ConfNb=1
-SH.FMC_A2.0=FMC_A2,12b-sda1
+SH.FMC_A2.0=FMC_A2,13b-sda1
 SH.FMC_A2.ConfNb=1
-SH.FMC_A3.0=FMC_A3,12b-sda1
+SH.FMC_A3.0=FMC_A3,13b-sda1
 SH.FMC_A3.ConfNb=1
-SH.FMC_A4.0=FMC_A4,12b-sda1
+SH.FMC_A4.0=FMC_A4,13b-sda1
 SH.FMC_A4.ConfNb=1
-SH.FMC_A5.0=FMC_A5,12b-sda1
+SH.FMC_A5.0=FMC_A5,13b-sda1
 SH.FMC_A5.ConfNb=1
-SH.FMC_A6.0=FMC_A6,12b-sda1
+SH.FMC_A6.0=FMC_A6,13b-sda1
 SH.FMC_A6.ConfNb=1
-SH.FMC_A7.0=FMC_A7,12b-sda1
+SH.FMC_A7.0=FMC_A7,13b-sda1
 SH.FMC_A7.ConfNb=1
-SH.FMC_A8.0=FMC_A8,12b-sda1
+SH.FMC_A8.0=FMC_A8,13b-sda1
 SH.FMC_A8.ConfNb=1
-SH.FMC_A9.0=FMC_A9,12b-sda1
+SH.FMC_A9.0=FMC_A9,13b-sda1
 SH.FMC_A9.ConfNb=1
 SH.FMC_D0_DA0.0=FMC_D0,sd-16b-d1
 SH.FMC_D0_DA0.ConfNb=1
@@ -807,13 +813,13 @@ SH.FMC_NBL0.0=FMC_NBL0,Sd2ByteEnable1
 SH.FMC_NBL0.ConfNb=1
 SH.FMC_NBL1.0=FMC_NBL1,Sd2ByteEnable1
 SH.FMC_NBL1.ConfNb=1
-SH.FMC_SDCLK.0=FMC_SDCLK,12b-sda1
+SH.FMC_SDCLK.0=FMC_SDCLK,13b-sda1
 SH.FMC_SDCLK.ConfNb=1
-SH.FMC_SDNCAS.0=FMC_SDNCAS,12b-sda1
+SH.FMC_SDNCAS.0=FMC_SDNCAS,13b-sda1
 SH.FMC_SDNCAS.ConfNb=1
-SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
+SH.FMC_SDNRAS.0=FMC_SDNRAS,13b-sda1
 SH.FMC_SDNRAS.ConfNb=1
-SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
+SH.FMC_SDNWE.0=FMC_SDNWE,13b-sda1
 SH.FMC_SDNWE.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=30.0 MBits/s
