--- a/src/FlightComputer/FlightComputer.ioc
+++ b/src/FlightComputer/FlightComputer.ioc
@@ -89,79 +89,79 @@ Mcu.Pin3=PE5
 Mcu.Pin30=PC4
 Mcu.Pin31=PC5
 Mcu.Pin32=PB0
-Mcu.Pin33=PF11
-Mcu.Pin34=PF12
-Mcu.Pin35=PF13
-Mcu.Pin36=PF14
-Mcu.Pin37=PF15
-Mcu.Pin38=PG0
-Mcu.Pin39=PG1
+Mcu.Pin33=PB1
+Mcu.Pin34=PB2
+Mcu.Pin35=PF11
+Mcu.Pin36=PF12
+Mcu.Pin37=PF13
+Mcu.Pin38=PF14
+Mcu.Pin39=PF15
 Mcu.Pin4=PE6
-Mcu.Pin40=PE7
-Mcu.Pin41=PE8
-Mcu.Pin42=PE9
-Mcu.Pin43=PE10
-Mcu.Pin44=PE11
-Mcu.Pin45=PE12
-Mcu.Pin46=PE13
-Mcu.Pin47=PE14
-Mcu.Pin48=PE15
-Mcu.Pin49=PB10
+Mcu.Pin40=PG0
+Mcu.Pin41=PG1
+Mcu.Pin42=PE7
+Mcu.Pin43=PE8
+Mcu.Pin44=PE9
+Mcu.Pin45=PE10
+Mcu.Pin46=PE11
+Mcu.Pin47=PE12
+Mcu.Pin48=PE13
+Mcu.Pin49=PE14
 Mcu.Pin5=PC13
-Mcu.Pin50=PB11
-Mcu.Pin51=PB12
-Mcu.Pin52=PB13
-Mcu.Pin53=PB14
-Mcu.Pin54=PB15
-Mcu.Pin55=PD8
-Mcu.Pin56=PD9
-Mcu.Pin57=PD10
-Mcu.Pin58=PD11
-Mcu.Pin59=PD12
+Mcu.Pin50=PE15
+Mcu.Pin51=PB10
+Mcu.Pin52=PB11
+Mcu.Pin53=PB12
+Mcu.Pin54=PB13
+Mcu.Pin55=PB14
+Mcu.Pin56=PB15
+Mcu.Pin57=PD8
+Mcu.Pin58=PD9
+Mcu.Pin59=PD10
 Mcu.Pin6=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin60=PD13
-Mcu.Pin61=PD14
-Mcu.Pin62=PD15
-Mcu.Pin63=PJ8
-Mcu.Pin64=PJ9
-Mcu.Pin65=PJ10
-Mcu.Pin66=PJ11
-Mcu.Pin67=PK0
-Mcu.Pin68=PK1
-Mcu.Pin69=PK2
+Mcu.Pin60=PD11
+Mcu.Pin61=PD12
+Mcu.Pin62=PD13
+Mcu.Pin63=PD14
+Mcu.Pin64=PD15
+Mcu.Pin65=PJ8
+Mcu.Pin66=PJ9
+Mcu.Pin67=PJ10
+Mcu.Pin68=PJ11
+Mcu.Pin69=PK0
 Mcu.Pin7=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin70=PG2
-Mcu.Pin71=PG3
-Mcu.Pin72=PG4
-Mcu.Pin73=PG5
-Mcu.Pin74=PG6
-Mcu.Pin75=PG7
-Mcu.Pin76=PG8
-Mcu.Pin77=PC6
-Mcu.Pin78=PC7
-Mcu.Pin79=PC8
+Mcu.Pin70=PK1
+Mcu.Pin71=PK2
+Mcu.Pin72=PG2
+Mcu.Pin73=PG4
+Mcu.Pin74=PG5
+Mcu.Pin75=PG6
+Mcu.Pin76=PG7
+Mcu.Pin77=PG8
+Mcu.Pin78=PC6
+Mcu.Pin79=PC7
 Mcu.Pin8=PF0
-Mcu.Pin80=PC9
-Mcu.Pin81=PA8
-Mcu.Pin82=PA9
-Mcu.Pin83=PA10
-Mcu.Pin84=PA11
-Mcu.Pin85=PA12
-Mcu.Pin86=PA13 (JTMS/SWDIO)
-Mcu.Pin87=PA14 (JTCK/SWCLK)
-Mcu.Pin88=PA15 (JTDI)
-Mcu.Pin89=PC10
+Mcu.Pin80=PC8
+Mcu.Pin81=PC9
+Mcu.Pin82=PA8
+Mcu.Pin83=PA9
+Mcu.Pin84=PA10
+Mcu.Pin85=PA11
+Mcu.Pin86=PA12
+Mcu.Pin87=PA13 (JTMS/SWDIO)
+Mcu.Pin88=PA14 (JTCK/SWCLK)
+Mcu.Pin89=PA15 (JTDI)
 Mcu.Pin9=PF1
-Mcu.Pin90=PC11
-Mcu.Pin91=PC12
-Mcu.Pin92=PD0
-Mcu.Pin93=PD1
-Mcu.Pin94=PD2
-Mcu.Pin95=PD3
-Mcu.Pin96=PD4
-Mcu.Pin97=PD5
-Mcu.Pin98=PD6
-Mcu.Pin99=PD7
+Mcu.Pin90=PC10
+Mcu.Pin91=PC11
+Mcu.Pin92=PC12
+Mcu.Pin93=PD0
+Mcu.Pin94=PD1
+Mcu.Pin95=PD2
+Mcu.Pin96=PD3
+Mcu.Pin97=PD4
+Mcu.Pin98=PD5
+Mcu.Pin99=PD6
 Mcu.PinsNb=118
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -252,6 +252,8 @@ PA9.Signal=USART1_TX
 PB0.GPIOParameters=PinAttribute
 PB0.PinAttribute=CortexM7
 PB0.Signal=ADCx_INP9
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB10.GPIOParameters=PinAttribute
 PB10.Mode=I2C
 PB10.PinAttribute=CortexM7
@@ -276,6 +278,8 @@ PB15.GPIOParameters=PinAttribute
 PB15.Mode=Host_FS
 PB15.PinAttribute=CortexM7
 PB15.Signal=USB_OTG_HS_DP
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3\ (JTDO/TRACESWO).GPIOParameters=PinAttribute
 PB3\ (JTDO/TRACESWO).Mode=JTAG_5_pins
 PB3\ (JTDO/TRACESWO).PinAttribute=CortexM7
@@ -410,10 +414,6 @@ PD6.GPIOParameters=PinAttribute
 PD6.Locked=true
 PD6.PinAttribute=Free
 PD6.Signal=GPIO_Output
-PD7.GPIOParameters=PinAttribute
-PD7.Locked=true
-PD7.PinAttribute=Free
-PD7.Signal=GPIO_Output
 PD8.GPIOParameters=PinAttribute
 PD8.PinAttribute=CortexM7
 PD8.Signal=FMC_D13_DA13
@@ -559,10 +559,6 @@ PG15.Signal=FMC_SDNCAS
 PG2.GPIOParameters=PinAttribute
 PG2.PinAttribute=CortexM7
 PG2.Signal=FMC_A12
-PG3.GPIOParameters=PinAttribute
-PG3.Locked=true
-PG3.PinAttribute=Free
-PG3.Signal=GPIO_Output
 PG4.GPIOParameters=PinAttribute
 PG4.PinAttribute=CortexM7
 PG4.Signal=FMC_A14_BA0
@@ -616,9 +612,7 @@ PK1.GPIOParameters=PinAttribute
 PK1.Locked=true
 PK1.PinAttribute=Free
 PK1.Signal=GPIO_Output
-PK2.GPIOParameters=PinAttribute
 PK2.Locked=true
-PK2.PinAttribute=Free
 PK2.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
