--- a/src/FlightComputer/FlightComputer.ioc
+++ b/src/FlightComputer/FlightComputer.ioc
@@ -1,16 +1,15 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_9
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag
-ADC1.NbrOfConversionFlag=1
-ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetSignedSaturation-1\#ChannelRegularConversion=DISABLE
-ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.master=1
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 CortexM4.IPs=CORTEX_M4\:I,DEBUG,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,I2C1\:I,SPI2\:I,USART2\:I,USART3\:I,USART1
-CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,FMC\:I,I2C2\:I,SPI1\:I,QUADSPI\:I,USB_OTG_FS\:I,USB_OTG_HS\:I,USART6\:I,ADC1\:I,USART1\:I
+CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,FMC\:I,I2C2\:I,SPI1\:I,QUADSPI\:I,USB_OTG_FS\:I,USB_OTG_HS\:I,USART6\:I,USART1\:I,SPI4\:I,ADC3\:I
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
 I2C1.Timing=0x307075B1
 I2C2.IPParameters=Timing
@@ -20,17 +19,17 @@ Mcu.Context0=CortexM7
 Mcu.Context1=CortexM4
 Mcu.ContextNb=2
 Mcu.Family=STM32H7
-Mcu.IP0=ADC1
+Mcu.IP0=ADC3
 Mcu.IP1=CORTEX_M4
-Mcu.IP10=RCC
-Mcu.IP11=SPI1
-Mcu.IP12=SPI2
-Mcu.IP13=SYS
-Mcu.IP14=SYS_M4
-Mcu.IP15=USART1
-Mcu.IP16=USART2
-Mcu.IP17=USART3
-Mcu.IP18=USART6
+Mcu.IP10=QUADSPI
+Mcu.IP11=RCC
+Mcu.IP12=SPI1
+Mcu.IP13=SPI4
+Mcu.IP14=SYS
+Mcu.IP15=SYS_M4
+Mcu.IP16=USART1
+Mcu.IP17=USART2
+Mcu.IP18=USART3
 Mcu.IP19=USB_OTG_FS
 Mcu.IP2=CORTEX_M7
 Mcu.IP20=USB_OTG_HS
@@ -40,45 +39,47 @@ Mcu.IP5=I2C1
 Mcu.IP6=I2C2
 Mcu.IP7=NVIC1
 Mcu.IP8=NVIC2
-Mcu.IP9=QUADSPI
+Mcu.IP9=PWR
 Mcu.IPNb=21
 Mcu.Name=STM32H745IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PF2
-Mcu.Pin100=PG9
-Mcu.Pin101=PG10
-Mcu.Pin102=PG11
-Mcu.Pin103=PG12
-Mcu.Pin104=PG13
-Mcu.Pin105=PG14
-Mcu.Pin106=PG15
-Mcu.Pin107=PB3 (JTDO/TRACESWO)
-Mcu.Pin108=PB4 (NJTRST)
-Mcu.Pin109=PB5
-Mcu.Pin11=PF3
-Mcu.Pin110=PB6
-Mcu.Pin111=PB7
-Mcu.Pin112=PB8
-Mcu.Pin113=PB9
-Mcu.Pin114=PE0
-Mcu.Pin115=PE1
-Mcu.Pin116=VP_SYS_VS_Systick
-Mcu.Pin117=VP_SYS_M4_VS_Systick
-Mcu.Pin12=PF4
-Mcu.Pin13=PF5
-Mcu.Pin14=PF6
-Mcu.Pin15=PF7
-Mcu.Pin16=PF8
-Mcu.Pin17=PF9
-Mcu.Pin18=PF10
-Mcu.Pin19=PH0-OSC_IN (PH0)
+Mcu.Pin10=PF4
+Mcu.Pin100=PD6
+Mcu.Pin101=PD7
+Mcu.Pin102=PG9
+Mcu.Pin103=PG10
+Mcu.Pin104=PG11
+Mcu.Pin105=PG12
+Mcu.Pin106=PG13
+Mcu.Pin107=PG14
+Mcu.Pin108=PG15
+Mcu.Pin109=PB3 (JTDO/TRACESWO)
+Mcu.Pin11=PF5
+Mcu.Pin110=PB4 (NJTRST)
+Mcu.Pin111=PB5
+Mcu.Pin112=PB6
+Mcu.Pin113=PB7
+Mcu.Pin114=PB8
+Mcu.Pin115=PB9
+Mcu.Pin116=PE0
+Mcu.Pin117=PE1
+Mcu.Pin118=VP_SYS_VS_Systick
+Mcu.Pin119=VP_SYS_M4_VS_Systick
+Mcu.Pin12=PF6
+Mcu.Pin13=PF7
+Mcu.Pin14=PF8
+Mcu.Pin15=PF9
+Mcu.Pin16=PF10
+Mcu.Pin17=PH0-OSC_IN (PH0)
+Mcu.Pin18=PH1-OSC_OUT (PH1)
+Mcu.Pin19=PC0
 Mcu.Pin2=PE4
-Mcu.Pin20=PH1-OSC_OUT (PH1)
-Mcu.Pin21=PC0
-Mcu.Pin22=PC1
-Mcu.Pin23=PC2_C
+Mcu.Pin20=PC1
+Mcu.Pin21=PC3_C
+Mcu.Pin22=PA0
+Mcu.Pin23=PA1
 Mcu.Pin24=PA2
 Mcu.Pin25=PA3
 Mcu.Pin26=PA4
@@ -118,7 +119,7 @@ Mcu.Pin56=PB15
 Mcu.Pin57=PD8
 Mcu.Pin58=PD9
 Mcu.Pin59=PD10
-Mcu.Pin6=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin6=PF0
 Mcu.Pin60=PD11
 Mcu.Pin61=PD12
 Mcu.Pin62=PD13
@@ -129,40 +130,40 @@ Mcu.Pin66=PJ9
 Mcu.Pin67=PJ10
 Mcu.Pin68=PJ11
 Mcu.Pin69=PK0
-Mcu.Pin7=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin7=PF1
 Mcu.Pin70=PK1
 Mcu.Pin71=PK2
 Mcu.Pin72=PG2
-Mcu.Pin73=PG4
-Mcu.Pin74=PG5
-Mcu.Pin75=PG6
-Mcu.Pin76=PG7
-Mcu.Pin77=PG8
-Mcu.Pin78=PC6
-Mcu.Pin79=PC7
-Mcu.Pin8=PF0
-Mcu.Pin80=PC8
-Mcu.Pin81=PC9
-Mcu.Pin82=PA8
-Mcu.Pin83=PA9
-Mcu.Pin84=PA10
-Mcu.Pin85=PA11
-Mcu.Pin86=PA12
-Mcu.Pin87=PA13 (JTMS/SWDIO)
-Mcu.Pin88=PA14 (JTCK/SWCLK)
-Mcu.Pin89=PA15 (JTDI)
-Mcu.Pin9=PF1
-Mcu.Pin90=PC10
-Mcu.Pin91=PC11
-Mcu.Pin92=PC12
-Mcu.Pin93=PD0
-Mcu.Pin94=PD1
-Mcu.Pin95=PD2
-Mcu.Pin96=PD3
-Mcu.Pin97=PD4
-Mcu.Pin98=PD5
-Mcu.Pin99=PD6
-Mcu.PinsNb=118
+Mcu.Pin73=PG3
+Mcu.Pin74=PG4
+Mcu.Pin75=PG5
+Mcu.Pin76=PG6
+Mcu.Pin77=PG7
+Mcu.Pin78=PG8
+Mcu.Pin79=PC6
+Mcu.Pin8=PF2
+Mcu.Pin80=PC7
+Mcu.Pin81=PC8
+Mcu.Pin82=PC9
+Mcu.Pin83=PA8
+Mcu.Pin84=PA9
+Mcu.Pin85=PA10
+Mcu.Pin86=PA11
+Mcu.Pin87=PA12
+Mcu.Pin88=PA13 (JTMS/SWDIO)
+Mcu.Pin89=PA14 (JTCK/SWCLK)
+Mcu.Pin9=PF3
+Mcu.Pin90=PA15 (JTDI)
+Mcu.Pin91=PC10
+Mcu.Pin92=PC11
+Mcu.Pin93=PC12
+Mcu.Pin94=PD0
+Mcu.Pin95=PD1
+Mcu.Pin96=PD2
+Mcu.Pin97=PD3
+Mcu.Pin98=PD4
+Mcu.Pin99=PD5
+Mcu.PinsNb=120
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745IITx
@@ -190,6 +191,14 @@ NVIC2.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0.GPIOParameters=PinAttribute
+PA0.Mode=WakeUp0
+PA0.PinAttribute=CortexM7
+PA0.Signal=PWR_WKUP0
+PA1.GPIOParameters=PinAttribute
+PA1.Locked=true
+PA1.PinAttribute=Free
+PA1.Signal=GPIO_Input
 PA10.GPIOParameters=PinAttribute
 PA10.Mode=Asynchronous
 PA10.PinAttribute=CortexM7
@@ -250,10 +259,13 @@ PA9.Mode=Asynchronous
 PA9.PinAttribute=CortexM7
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=PinAttribute
-PB0.PinAttribute=CortexM7
-PB0.Signal=ADCx_INP9
+PB0.Locked=true
+PB0.PinAttribute=Free
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=PinAttribute
 PB1.Locked=true
-PB1.Signal=GPIO_Output
+PB1.PinAttribute=Free
+PB1.Signal=GPIO_Input
 PB10.GPIOParameters=PinAttribute
 PB10.Mode=I2C
 PB10.PinAttribute=CortexM7
@@ -263,23 +275,25 @@ PB11.Mode=I2C
 PB11.PinAttribute=CortexM7
 PB11.Signal=I2C2_SDA
 PB12.GPIOParameters=PinAttribute
-PB12.Locked=true
-PB12.PinAttribute=Free
-PB12.Signal=GPIO_Output
+PB12.Mode=OTG/Dual-Role-Device-FS
+PB12.PinAttribute=CortexM7
+PB12.Signal=USB_OTG_HS_ID
 PB13.GPIOParameters=PinAttribute
 PB13.Mode=Activate_VBUS_FS
 PB13.PinAttribute=CortexM7
 PB13.Signal=USB_OTG_HS_VBUS
 PB14.GPIOParameters=PinAttribute
-PB14.Mode=Host_FS
+PB14.Mode=OTG/Dual-Role-Device-FS
 PB14.PinAttribute=CortexM7
 PB14.Signal=USB_OTG_HS_DM
 PB15.GPIOParameters=PinAttribute
-PB15.Mode=Host_FS
+PB15.Mode=OTG/Dual-Role-Device-FS
 PB15.PinAttribute=CortexM7
 PB15.Signal=USB_OTG_HS_DP
+PB2.GPIOParameters=PinAttribute
 PB2.Locked=true
-PB2.Signal=GPIO_Output
+PB2.PinAttribute=Free
+PB2.Signal=GPIO_Input
 PB3\ (JTDO/TRACESWO).GPIOParameters=PinAttribute
 PB3\ (JTDO/TRACESWO).Mode=JTAG_5_pins
 PB3\ (JTDO/TRACESWO).PinAttribute=CortexM7
@@ -307,14 +321,14 @@ PB8.Signal=I2C1_SCL
 PB9.GPIOParameters=PinAttribute
 PB9.Locked=true
 PB9.PinAttribute=Free
-PB9.Signal=GPIO_Input
+PB9.Signal=GPIO_Output
 PC0.GPIOParameters=PinAttribute
 PC0.PinAttribute=CortexM7
 PC0.Signal=FMC_SDNWE
 PC1.GPIOParameters=PinAttribute
-PC1.Mode=Full_Duplex_Master
-PC1.PinAttribute=CortexM4
-PC1.Signal=SPI2_MOSI
+PC1.Locked=true
+PC1.PinAttribute=Free
+PC1.Signal=GPIO_Input
 PC10.GPIOParameters=PinAttribute
 PC10.Mode=Asynchronous
 PC10.PinAttribute=CortexM4
@@ -331,42 +345,34 @@ PC13.GPIOParameters=PinAttribute
 PC13.Locked=true
 PC13.PinAttribute=Free
 PC13.Signal=GPIO_Input
-PC14-OSC32_IN\ (OSC32_IN).GPIOParameters=PinAttribute
-PC14-OSC32_IN\ (OSC32_IN).Locked=true
-PC14-OSC32_IN\ (OSC32_IN).PinAttribute=Free
-PC14-OSC32_IN\ (OSC32_IN).Signal=GPIO_Input
-PC15-OSC32_OUT\ (OSC32_OUT).GPIOParameters=PinAttribute
-PC15-OSC32_OUT\ (OSC32_OUT).Locked=true
-PC15-OSC32_OUT\ (OSC32_OUT).PinAttribute=Free
-PC15-OSC32_OUT\ (OSC32_OUT).Signal=GPIO_Input
-PC2_C.GPIOParameters=PinAttribute
-PC2_C.Mode=Full_Duplex_Master
-PC2_C.PinAttribute=CortexM4
-PC2_C.Signal=SPI2_MISO
+PC3_C.GPIOParameters=PinAttribute
+PC3_C.Mode=IN1-Single-Ended
+PC3_C.PinAttribute=CortexM7
+PC3_C.Signal=ADC3_INP1
 PC4.GPIOParameters=PinAttribute
 PC4.Locked=true
 PC4.PinAttribute=Free
-PC4.Signal=GPIO_Output
+PC4.Signal=GPIO_Input
 PC5.GPIOParameters=PinAttribute
 PC5.Locked=true
 PC5.PinAttribute=Free
-PC5.Signal=GPIO_Output
+PC5.Signal=GPIO_Input
 PC6.GPIOParameters=PinAttribute
-PC6.Mode=Asynchronous
-PC6.PinAttribute=CortexM7
-PC6.Signal=USART6_TX
+PC6.Locked=true
+PC6.PinAttribute=Free
+PC6.Signal=GPIO_Input
 PC7.GPIOParameters=PinAttribute
-PC7.Mode=Asynchronous
-PC7.PinAttribute=CortexM7
-PC7.Signal=USART6_RX
+PC7.Locked=true
+PC7.PinAttribute=Free
+PC7.Signal=GPIO_Input
 PC8.GPIOParameters=PinAttribute
 PC8.Locked=true
 PC8.PinAttribute=Free
-PC8.Signal=GPIO_Output
+PC8.Signal=GPIO_Input
 PC9.GPIOParameters=PinAttribute
 PC9.Locked=true
 PC9.PinAttribute=Free
-PC9.Signal=GPIO_Output
+PC9.Signal=GPIO_Input
 PD0.GPIOParameters=PinAttribute
 PD0.PinAttribute=CortexM7
 PD0.Signal=FMC_D2_DA2
@@ -397,11 +403,11 @@ PD15.Signal=FMC_D1_DA1
 PD2.GPIOParameters=PinAttribute
 PD2.Locked=true
 PD2.PinAttribute=Free
-PD2.Signal=GPIO_Input
+PD2.Signal=GPIO_Output
 PD3.GPIOParameters=PinAttribute
-PD3.Mode=Full_Duplex_Master
-PD3.PinAttribute=CortexM4
-PD3.Signal=SPI2_SCK
+PD3.Locked=true
+PD3.PinAttribute=Free
+PD3.Signal=GPIO_Output
 PD4.GPIOParameters=PinAttribute
 PD4.Locked=true
 PD4.PinAttribute=Free
@@ -414,6 +420,10 @@ PD6.GPIOParameters=PinAttribute
 PD6.Locked=true
 PD6.PinAttribute=Free
 PD6.Signal=GPIO_Output
+PD7.GPIOParameters=PinAttribute
+PD7.Locked=true
+PD7.PinAttribute=Free
+PD7.Signal=GPIO_Output
 PD8.GPIOParameters=PinAttribute
 PD8.PinAttribute=CortexM7
 PD8.Signal=FMC_D13_DA13
@@ -445,25 +455,25 @@ PE15.GPIOParameters=PinAttribute
 PE15.PinAttribute=CortexM7
 PE15.Signal=FMC_D12_DA12
 PE2.GPIOParameters=PinAttribute
-PE2.Locked=true
-PE2.PinAttribute=Free
-PE2.Signal=GPIO_Input
+PE2.Mode=Full_Duplex_Master
+PE2.PinAttribute=CortexM7
+PE2.Signal=SPI4_SCK
 PE3.GPIOParameters=PinAttribute
 PE3.Locked=true
 PE3.PinAttribute=Free
-PE3.Signal=GPIO_Input
+PE3.Signal=GPIO_Output
 PE4.GPIOParameters=PinAttribute
 PE4.Locked=true
 PE4.PinAttribute=Free
-PE4.Signal=GPIO_Input
+PE4.Signal=GPIO_Output
 PE5.GPIOParameters=PinAttribute
-PE5.Locked=true
-PE5.PinAttribute=Free
-PE5.Signal=GPIO_Input
+PE5.Mode=Full_Duplex_Master
+PE5.PinAttribute=CortexM7
+PE5.Signal=SPI4_MISO
 PE6.GPIOParameters=PinAttribute
-PE6.Locked=true
-PE6.PinAttribute=Free
-PE6.Signal=GPIO_Input
+PE6.Mode=Full_Duplex_Master
+PE6.PinAttribute=CortexM7
+PE6.Signal=SPI4_MOSI
 PE7.GPIOParameters=PinAttribute
 PE7.PinAttribute=CortexM7
 PE7.Signal=FMC_D4_DA4
@@ -552,13 +562,17 @@ PG13.Signal=GPIO_Input
 PG14.GPIOParameters=PinAttribute
 PG14.Locked=true
 PG14.PinAttribute=Free
-PG14.Signal=GPIO_Input
+PG14.Signal=GPIO_Output
 PG15.GPIOParameters=PinAttribute
 PG15.PinAttribute=CortexM7
 PG15.Signal=FMC_SDNCAS
 PG2.GPIOParameters=PinAttribute
 PG2.PinAttribute=CortexM7
 PG2.Signal=FMC_A12
+PG3.GPIOParameters=PinAttribute
+PG3.Locked=true
+PG3.PinAttribute=Free
+PG3.Signal=GPIO_Output
 PG4.GPIOParameters=PinAttribute
 PG4.PinAttribute=CortexM7
 PG4.Signal=FMC_A14_BA0
@@ -612,7 +626,9 @@ PK1.GPIOParameters=PinAttribute
 PK1.Locked=true
 PK1.PinAttribute=Free
 PK1.Signal=GPIO_Output
+PK2.GPIOParameters=PinAttribute
 PK2.Locked=true
+PK2.PinAttribute=Free
 PK2.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -643,7 +659,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART6_UART_Init-USART6-false-HAL-true-CortexM7,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true-CortexM7,9-MX_USB_OTG_HS_HCD_Init-USB_OTG_HS-false-HAL-true-CortexM7,10-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,11-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_I2C1_Init-I2C1-false-HAL-true-CortexM4,3-MX_SPI2_Init-SPI2-false-HAL-true-CortexM4,4-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM4,5-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,6-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true-CortexM7,8-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true-CortexM7,9-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,11-MX_SPI4_Init-SPI4-false-HAL-true-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_I2C1_Init-I2C1-false-HAL-true-CortexM4,3-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM4,4-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,5-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_CLKP
 RCC.ADCFreq_Value=64000000
 RCC.AHB12Freq_Value=240000000
@@ -739,8 +755,6 @@ RCC.VCO3OutputFreq_Value=960000000
 RCC.VCOInput1Freq_Value=5000000
 RCC.VCOInput2Freq_Value=5000000
 RCC.VCOInput3Freq_Value=5000000
-SH.ADCx_INP9.0=ADC1_INP9,IN9-Single-Ended
-SH.ADCx_INP9.ConfNb=1
 SH.FMC_A0.0=FMC_A0,13b-sda1
 SH.FMC_A0.ConfNb=1
 SH.FMC_A1.0=FMC_A1,13b-sda1
@@ -822,24 +836,19 @@ SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI2.CalculateBaudRate=30.0 MBits/s
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
+SPI4.CalculateBaudRate=60.0 MBits/s
+SPI4.Direction=SPI_DIRECTION_2LINES
+SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI4.Mode=SPI_MODE_MASTER
+SPI4.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
-USART6.IPParameters=VirtualMode-Asynchronous
-USART6.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
-USB_OTG_HS.IPParameters=VirtualMode-Host_FS
-USB_OTG_HS.VirtualMode-Host_FS=Host_FS
 VP_SYS_M4_VS_Systick.Mode=SysTick
 VP_SYS_M4_VS_Systick.Signal=SYS_M4_VS_Systick
 VP_SYS_VS_Systick.Mode=SysTick
