--- a/src/FlightComputer/FlightComputer.ioc
+++ b/src/FlightComputer/FlightComputer.ioc
@@ -8,6 +8,24 @@ ADC3.Rank-0\#ChannelRegularConversion=1
 ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 CortexM4.IPs=CORTEX_M4\:I,DEBUG,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,I2C1\:I,SPI2\:I,USART2\:I,USART3\:I,USART1,ADC3\:I,SPI4\:I,TIM2\:I
 CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,FMC\:I,I2C2\:I,SPI1\:I,QUADSPI\:I,USB_OTG_FS\:I,USB_OTG_HS\:I,USART6\:I,USART1\:I
+FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
+FMC.ColumnBitsNumber1=FMC_SDRAM_COLUMN_BITS_NUM_9
+FMC.ExitSelfRefreshDelay1=7
+FMC.IPParameters=ColumnBitsNumber1,CASLatency1,SDClockPeriod1,SDClockPeriod2,ReadBurst1,ReadBurst2,ReadPipeDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,RowCycleDelay1,RowCycleDelay2,WriteRecoveryTime1,RCDDelay1,LoadToActiveDelay1,RPDelay1,RPDelay2,ReadPipeDelay2
+FMC.LoadToActiveDelay1=2
+FMC.RCDDelay1=2
+FMC.RPDelay1=2
+FMC.RPDelay2=2
+FMC.ReadBurst1=FMC_SDRAM_RBURST_ENABLE
+FMC.ReadBurst2=FMC_SDRAM_RBURST_ENABLE
+FMC.ReadPipeDelay1=FMC_SDRAM_RPIPE_DELAY_1
+FMC.ReadPipeDelay2=FMC_SDRAM_RPIPE_DELAY_1
+FMC.RowCycleDelay1=7
+FMC.RowCycleDelay2=7
+FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
+FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
+FMC.SelfRefreshTime1=4
+FMC.WriteRecoveryTime1=4
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
@@ -734,6 +752,12 @@ ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true-CortexM7,8-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,9-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_I2C1_Init-I2C1-false-HAL-true-CortexM4,3-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM4,4-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,5-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM4,6-MX_ADC3_Init-ADC3-false-HAL-true-CortexM4,7-MX_SPI4_Init-SPI4-false-HAL-true-CortexM4,8-MX_TIM2_Init-TIM2-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4
+QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
+QUADSPI.ClockPrescaler=5
+QUADSPI.FifoThreshold=4
+QUADSPI.FlashSize=25
+QUADSPI.IPParameters=ClockPrescaler,FifoThreshold,SampleShifting,FlashSize,ChipSelectHighTime
+QUADSPI.SampleShifting=QSPI_SAMPLE_SHIFTING_HALFCYCLE
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_CLKP
 RCC.ADCFreq_Value=64000000
 RCC.AHB12Freq_Value=240000000
