h/w test GPS: OK NOR-FLASH: Direct(OK), MemoryMapped(FAIL: NEED MORE TIME) IMU(SPI): H/W Fault -> swapped Pin 3,4 PMIC: Communication(OK), Turn on Power Rail(FAIL)

--- a/src/Test/FC_HwTest/FC_HwTest.ioc
+++ b/src/Test/FC_HwTest/FC_HwTest.ioc
@@ -188,6 +188,7 @@ NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC1.OTG_HS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC1.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC1.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -780,7 +781,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,5-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,6-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true-CortexM7,7-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,8-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,9-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM4,3-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,4-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM4,5-MX_ADC3_Init-ADC3-false-HAL-true-CortexM4,6-MX_SPI4_Init-SPI4-false-HAL-true-CortexM4,7-MX_TIM2_Init-TIM2-false-HAL-true-CortexM4,8-MX_I2C2_Init-I2C2-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,5-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,6-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,7-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,8-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,9-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM4,3-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,4-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM4,5-MX_ADC3_Init-ADC3-false-HAL-true-CortexM4,6-MX_SPI4_Init-SPI4-false-HAL-true-CortexM4,7-MX_TIM2_Init-TIM2-false-HAL-true-CortexM4,8-MX_I2C2_Init-I2C2-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_CLKP
 RCC.ADCFreq_Value=64000000
 RCC.AHB12Freq_Value=240000000
@@ -957,8 +958,8 @@ SPI1.IPParameters=VirtualType,Mode,Direction,VirtualNSS,DataSize,FifoThreshold
 SPI1.Mode=SPI_MODE_SLAVE
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_SLAVE
-SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI4.CalculateBaudRate=60.0 MBits/s
+SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI4.CalculateBaudRate=7.5 MBits/s
 SPI4.DataSize=SPI_DATASIZE_8BIT
 SPI4.Direction=SPI_DIRECTION_2LINES
 SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
