--- a/src/Test/FC_Test/FC_Test.ioc
+++ b/src/Test/FC_Test/FC_Test.ioc
@@ -57,9 +57,8 @@ Mcu.IP19=USART2
 Mcu.IP2=CORTEX_M7
 Mcu.IP20=USART3
 Mcu.IP21=USB_DEVICE_M7
-Mcu.IP22=USB_HOST_M7
-Mcu.IP23=USB_OTG_FS
-Mcu.IP24=USB_OTG_HS
+Mcu.IP22=USB_OTG_FS
+Mcu.IP23=USB_OTG_HS
 Mcu.IP3=DEBUG
 Mcu.IP4=FATFS_M7
 Mcu.IP5=FMC
@@ -67,7 +66,7 @@ Mcu.IP6=I2C1
 Mcu.IP7=I2C2
 Mcu.IP8=NVIC1
 Mcu.IP9=NVIC2
-Mcu.IPNb=25
+Mcu.IPNb=24
 Mcu.Name=STM32H745IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE2
@@ -100,7 +99,7 @@ Mcu.Pin121=VP_SYS_VS_Systick
 Mcu.Pin122=VP_SYS_M4_VS_Systick
 Mcu.Pin123=VP_TIM2_VS_no_output1
 Mcu.Pin124=VP_USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS
-Mcu.Pin125=VP_USB_HOST_M7_VS_USB_HOST_HID_HS
+Mcu.Pin125=VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_HS
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
 Mcu.Pin15=PF7
@@ -200,8 +199,8 @@ Mcu.PinsNb=126
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745IITx
-MxCube.Version=6.0.1
-MxDb.Version=DB.6.0.0
+MxCube.Version=6.1.1
+MxDb.Version=DB.6.0.10
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.ForceEnableDMAVector=true
@@ -354,12 +353,12 @@ PB13.PinAttribute=CortexM7
 PB13.Signal=USB_OTG_HS_VBUS
 PB14.GPIOParameters=PinAttribute
 PB14.Locked=true
-PB14.Mode=Host_FS
+PB14.Mode=Device_Only_FS
 PB14.PinAttribute=CortexM7
 PB14.Signal=USB_OTG_HS_DM
 PB15.GPIOParameters=PinAttribute
 PB15.Locked=true
-PB15.Mode=Host_FS
+PB15.Mode=Device_Only_FS
 PB15.PinAttribute=CortexM7
 PB15.Signal=USB_OTG_HS_DP
 PB2.ContextOwner=CortexM7
@@ -854,12 +853,12 @@ PK2.Locked=true
 PK2.PinAttribute=CortexM7
 PK2.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.BootMode=boot0
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -882,7 +881,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,8-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,9-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,10-MX_USB_HOST_Init-USB_HOST_M7-false-HAL-false-CortexM7,11-MX_ADC3_Init-ADC3-false-HAL-true-CortexM7,12-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,13-MX_SPI4_Init-SPI4-false-HAL-true-CortexM7,14-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM7,15-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,1-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,2-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,3-MX_USART2_UART_Init-USART2-true-HAL-false-CortexM4,4-MX_ADC3_Init-ADC3-true-HAL-false-CortexM4,5-MX_TIM2_Init-TIM2-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,8-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,9-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,10-MX_ADC3_Init-ADC3-false-HAL-true-CortexM7,11-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,12-MX_SPI4_Init-SPI4-false-HAL-true-CortexM7,13-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM7,14-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,1-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,2-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,3-MX_USART2_UART_Init-USART2-true-HAL-false-CortexM4,4-MX_ADC3_Init-ADC3-true-HAL-false-CortexM4,5-MX_TIM2_Init-TIM2-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_3_CYCLE
 QUADSPI.ClockPrescaler=5
 QUADSPI.FifoThreshold=1
@@ -1087,29 +1086,22 @@ USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE_M7.CLASS_NAME_FS=MSC
-USB_DEVICE_M7.IPParameters=VirtualMode-MSC_FS,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE_M7.CLASS_NAME_HS=CDC
+USB_DEVICE_M7.CONFIGURATION_STRING_MSC_FS=USD Config
+USB_DEVICE_M7.INTERFACE_STRING_MSC_FS=USD Interface
+USB_DEVICE_M7.IPParameters=VirtualMode-MSC_FS,VirtualModeFS,CLASS_NAME_FS,VirtualMode-CDC_HS,VirtualModeHS,CLASS_NAME_HS,MSC_MEDIA_PACKET-MSC_FS,MANUFACTURER_STRING-CDC_HS,PRODUCT_STRING_CDC_HS,PRODUCT_STRING_MSC_FS,CONFIGURATION_STRING_MSC_FS,INTERFACE_STRING_MSC_FS
+USB_DEVICE_M7.MANUFACTURER_STRING-CDC_HS=Notorious Rascal
+USB_DEVICE_M7.MSC_MEDIA_PACKET-MSC_FS=4096
+USB_DEVICE_M7.PRODUCT_STRING_CDC_HS=FC Virtual ComPort
+USB_DEVICE_M7.PRODUCT_STRING_MSC_FS=FC Mass Storage
+USB_DEVICE_M7.VirtualMode-CDC_HS=Cdc
 USB_DEVICE_M7.VirtualMode-MSC_FS=Msc
 USB_DEVICE_M7.VirtualModeFS=Msc_FS
-USB_HOST.BSP.number=1
-USB_HOST0.BSP.STBoard=false
-USB_HOST0.BSP.api=Unknown
-USB_HOST0.BSP.component=
-USB_HOST0.BSP.condition=
-USB_HOST0.BSP.i2caddr=0
-USB_HOST0.BSP.i2creg=
-USB_HOST0.BSP.instance=PD13
-USB_HOST0.BSP.ip=GPIO
-USB_HOST0.BSP.mode=Output
-USB_HOST0.BSP.name=Drive_VBUS_HS
-USB_HOST0.BSP.semaphore=
-USB_HOST0.BSP.solution=PD13
-USB_HOST_M7.IPParameters=USBH_HandleTypeDef-HID_HS,VirtualModeHS
-USB_HOST_M7.USBH_HandleTypeDef-HID_HS=hUsbHostHS
-USB_HOST_M7.VirtualModeHS=Hid
+USB_DEVICE_M7.VirtualModeHS=Cdc_HS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
-USB_OTG_HS.IPParameters=VirtualMode-Host_FS
-USB_OTG_HS.VirtualMode-Host_FS=Host_FS
+USB_OTG_HS.IPParameters=VirtualMode-Device_Only_FS
+USB_OTG_HS.VirtualMode-Device_Only_FS=Device_Only_FS
 VP_FATFS_M7_VS_FMC_SDRAM.Mode=FMC_SDRAM
 VP_FATFS_M7_VS_FMC_SDRAM.Signal=FATFS_M7_VS_FMC_SDRAM
 VP_FATFS_M7_VS_Generic.Mode=User_defined
@@ -1120,8 +1112,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
+VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
+VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_HS.Signal=USB_DEVICE_M7_VS_USB_DEVICE_CDC_HS
 VP_USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS.Mode=MSC_FS
 VP_USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS.Signal=USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS
-VP_USB_HOST_M7_VS_USB_HOST_HID_HS.Mode=HID_HS
-VP_USB_HOST_M7_VS_USB_HOST_HID_HS.Signal=USB_HOST_M7_VS_USB_HOST_HID_HS
 board=custom
