--- a/src/FlightComputer/FlightComputer.ioc
+++ b/src/FlightComputer/FlightComputer.ioc
@@ -9,8 +9,9 @@ ADC3.Rank-0\#ChannelRegularConversion=1
 ADC3.Resolution=ADC_RESOLUTION_10B
 ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 CortexM4.IPs=CORTEX_M4\:I,DEBUG,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,SPI2\:I,USART2,USART3,USART1,TIM2\:I,ADC3,FMC,SPI4,I2C2
+CortexM4.Pins=PE3,PE4,PB0,PB1,PB2,PG13
 CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,FMC\:I,I2C2\:I,SPI1\:I,QUADSPI\:I,USB_OTG_FS\:I,USB_OTG_HS\:I,USART6\:I,USART1\:I,ADC3\:I,I2C1\:I,SPI4\:I,USART2\:I,USART3\:I
-CortexM7.Pins=PE3,PE4,PC13,PC14-OSC32_IN (OSC32_IN),PC15-OSC32_OUT (OSC32_OUT),PC1,PA1,PC4,PC5,PB0,PB1,PB2,PB12,PD11,PD12,PD13,PJ8,PJ9,PJ10,PJ11,PK0,PK1,PK2,PG3,PG7,PC6,PC7,PC8,PC9,PA8,PC12,PD2,PD3,PD4,PD5,PD6,PD7,PG9,PG10,PG11,PG13,PG14,PB9
+CortexM7.Pins=PC13,PC14-OSC32_IN (OSC32_IN),PC15-OSC32_OUT (OSC32_OUT),PC1,PA1,PC4,PC5,PB12,PD11,PD12,PJ8,PJ9,PJ10,PJ11,PK0,PK1,PK2,PG3,PG7,PC6,PC7,PC8,PC9,PA8,PC12,PD2,PD3,PD4,PD5,PD6,PD7,PG9,PG10,PG11,PG14,PB9
 FATFS_M7.IPParameters=_VOLUMES,_MAX_SS,_USE_LFN,_CODE_PAGE,_USE_MKFS,_FS_EXFAT
 FATFS_M7._CODE_PAGE=949
 FATFS_M7._FS_EXFAT=1
@@ -59,8 +60,9 @@ Mcu.IP19=USART2
 Mcu.IP2=CORTEX_M7
 Mcu.IP20=USART3
 Mcu.IP21=USB_DEVICE_M7
-Mcu.IP22=USB_OTG_FS
-Mcu.IP23=USB_OTG_HS
+Mcu.IP22=USB_HOST_M7
+Mcu.IP23=USB_OTG_FS
+Mcu.IP24=USB_OTG_HS
 Mcu.IP3=DEBUG
 Mcu.IP4=FATFS_M7
 Mcu.IP5=FMC
@@ -68,7 +70,7 @@ Mcu.IP6=I2C1
 Mcu.IP7=I2C2
 Mcu.IP8=NVIC1
 Mcu.IP9=NVIC2
-Mcu.IPNb=24
+Mcu.IPNb=25
 Mcu.Name=STM32H745IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE2
@@ -100,7 +102,7 @@ Mcu.Pin120=VP_SYS_VS_Systick
 Mcu.Pin121=VP_SYS_M4_VS_Systick
 Mcu.Pin122=VP_TIM2_VS_no_output1
 Mcu.Pin123=VP_USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS
-Mcu.Pin124=VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_HS
+Mcu.Pin124=VP_USB_HOST_M7_VS_USB_HOST_HID_HS
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
 Mcu.Pin15=PF7
@@ -319,17 +321,17 @@ PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.PinAttribute=CortexM7
 PA9.Signal=USART1_TX
-PB0.ContextOwner=CortexM7
+PB0.ContextOwner=CortexM4
 PB0.GPIOParameters=GPIO_Label,PinAttribute
 PB0.GPIO_Label=IMU_DRDY
 PB0.Locked=true
-PB0.PinAttribute=CortexM7
+PB0.PinAttribute=CortexM4
 PB0.Signal=GPIO_Input
-PB1.ContextOwner=CortexM7
+PB1.ContextOwner=CortexM4
 PB1.GPIOParameters=GPIO_Label,PinAttribute
 PB1.GPIO_Label=IMU_FSYNC
 PB1.Locked=true
-PB1.PinAttribute=CortexM7
+PB1.PinAttribute=CortexM4
 PB1.Signal=GPIO_Input
 PB10.GPIOParameters=PinAttribute
 PB10.Locked=true
@@ -354,19 +356,19 @@ PB13.PinAttribute=CortexM7
 PB13.Signal=USB_OTG_HS_VBUS
 PB14.GPIOParameters=PinAttribute
 PB14.Locked=true
-PB14.Mode=Device_Only_FS
+PB14.Mode=Host_FS
 PB14.PinAttribute=CortexM7
 PB14.Signal=USB_OTG_HS_DM
 PB15.GPIOParameters=PinAttribute
 PB15.Locked=true
-PB15.Mode=Device_Only_FS
+PB15.Mode=Host_FS
 PB15.PinAttribute=CortexM7
 PB15.Signal=USB_OTG_HS_DP
-PB2.ContextOwner=CortexM7
+PB2.ContextOwner=CortexM4
 PB2.GPIOParameters=GPIO_Label,PinAttribute
 PB2.GPIO_Label=IMU_nINT
 PB2.Locked=true
-PB2.PinAttribute=CortexM7
+PB2.PinAttribute=CortexM4
 PB2.Signal=GPIO_Input
 PB3\ (JTDO/TRACESWO).GPIOParameters=PinAttribute
 PB3\ (JTDO/TRACESWO).Locked=true
@@ -516,11 +518,10 @@ PD12.GPIO_Label=EPD_D7
 PD12.Locked=true
 PD12.PinAttribute=CortexM7
 PD12.Signal=GPIO_Output
-PD13.ContextOwner=CortexM7
 PD13.GPIOParameters=PinState,GPIO_Label,PinAttribute
 PD13.GPIO_Label=USB_OTG_HS_PWR_EN
 PD13.Locked=true
-PD13.PinAttribute=CortexM7
+PD13.PinAttribute=Free
 PD13.PinState=GPIO_PIN_RESET
 PD13.Signal=GPIO_Output
 PD14.GPIOParameters=PinAttribute
@@ -613,18 +614,18 @@ PE2.Locked=true
 PE2.Mode=Full_Duplex_Master
 PE2.PinAttribute=CortexM7
 PE2.Signal=SPI4_SCK
-PE3.ContextOwner=CortexM7
+PE3.ContextOwner=CortexM4
 PE3.GPIOParameters=PinState,GPIO_Label,PinAttribute
 PE3.GPIO_Label=IMU1_nCS1
 PE3.Locked=true
-PE3.PinAttribute=CortexM7
+PE3.PinAttribute=CortexM4
 PE3.PinState=GPIO_PIN_SET
 PE3.Signal=GPIO_Output
-PE4.ContextOwner=CortexM7
+PE4.ContextOwner=CortexM4
 PE4.GPIOParameters=PinState,GPIO_Label,PinAttribute
 PE4.GPIO_Label=IMU1_nCS2
 PE4.Locked=true
-PE4.PinAttribute=CortexM7
+PE4.PinAttribute=CortexM4
 PE4.PinState=GPIO_PIN_SET
 PE4.Signal=GPIO_Output
 PE5.GPIOParameters=GPIO_Label,PinAttribute
@@ -745,11 +746,11 @@ PG11.GPIO_Label=PMIC_PWRUP
 PG11.Locked=true
 PG11.PinAttribute=CortexM7
 PG11.Signal=GPIO_Output
-PG13.ContextOwner=CortexM7
+PG13.ContextOwner=CortexM4
 PG13.GPIOParameters=PinState,GPIO_Label,PinAttribute
 PG13.GPIO_Label=PWR_LED2
 PG13.Locked=true
-PG13.PinAttribute=CortexM7
+PG13.PinAttribute=CortexM4
 PG13.PinState=GPIO_PIN_SET
 PG13.Signal=GPIO_Output
 PG14.ContextOwner=CortexM7
@@ -885,7 +886,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,8-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,9-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,10-MX_ADC3_Init-ADC3-false-HAL-true-CortexM7,11-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,12-MX_SPI4_Init-SPI4-false-HAL-true-CortexM7,13-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM7,14-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,1-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,2-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,3-MX_USART2_UART_Init-USART2-true-HAL-false-CortexM4,4-MX_ADC3_Init-ADC3-true-HAL-false-CortexM4,5-MX_TIM2_Init-TIM2-false-HAL-true-CortexM4,6-MX_FMC_Init-FMC-true-HAL-false-CortexM4,7-MX_I2C2_Init-I2C2-true-HAL-false-CortexM4,8-MX_SPI4_Init-SPI4-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,8-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,9-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,10-MX_ADC3_Init-ADC3-false-HAL-true-CortexM7,11-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,12-MX_SPI4_Init-SPI4-false-HAL-true-CortexM7,13-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM7,14-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,15-MX_USB_HOST_Init-USB_HOST_M7-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,3-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,4-MX_USART2_UART_Init-USART2-true-HAL-false-CortexM4,5-MX_ADC3_Init-ADC3-true-HAL-false-CortexM4,6-MX_TIM2_Init-TIM2-false-HAL-true-CortexM4,7-MX_FMC_Init-FMC-true-HAL-false-CortexM4,8-MX_I2C2_Init-I2C2-true-HAL-false-CortexM4,9-MX_SPI4_Init-SPI4-true-HAL-false-CortexM4,1-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_3_CYCLE
 QUADSPI.ClockPrescaler=5
 QUADSPI.FifoThreshold=1
@@ -1102,10 +1103,26 @@ USB_DEVICE_M7.VirtualMode-CDC_HS=Cdc
 USB_DEVICE_M7.VirtualMode-MSC_FS=Msc
 USB_DEVICE_M7.VirtualModeFS=Msc_FS
 USB_DEVICE_M7.VirtualModeHS=Cdc_HS
+USB_HOST.BSP.number=1
+USB_HOST0.BSP.STBoard=false
+USB_HOST0.BSP.api=Unknown
+USB_HOST0.BSP.component=
+USB_HOST0.BSP.condition=
+USB_HOST0.BSP.i2caddr=0
+USB_HOST0.BSP.i2creg=
+USB_HOST0.BSP.instance=PD13
+USB_HOST0.BSP.ip=GPIO
+USB_HOST0.BSP.mode=Output
+USB_HOST0.BSP.name=Drive_VBUS_HS
+USB_HOST0.BSP.semaphore=
+USB_HOST0.BSP.solution=PD13
+USB_HOST_M7.IPParameters=USBH_HandleTypeDef-HID_HS,VirtualModeHS
+USB_HOST_M7.USBH_HandleTypeDef-HID_HS=hUsbHostHS
+USB_HOST_M7.VirtualModeHS=Hid
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
-USB_OTG_HS.IPParameters=VirtualMode-Device_Only_FS
-USB_OTG_HS.VirtualMode-Device_Only_FS=Device_Only_FS
+USB_OTG_HS.IPParameters=VirtualMode-Host_FS
+USB_OTG_HS.VirtualMode-Host_FS=Host_FS
 VP_FATFS_M7_VS_Generic.Mode=User_defined
 VP_FATFS_M7_VS_Generic.Signal=FATFS_M7_VS_Generic
 VP_SYS_M4_VS_Systick.Mode=SysTick
@@ -1114,8 +1131,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
-VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
-VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_HS.Signal=USB_DEVICE_M7_VS_USB_DEVICE_CDC_HS
 VP_USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS.Mode=MSC_FS
 VP_USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS.Signal=USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS
+VP_USB_HOST_M7_VS_USB_HOST_HID_HS.Mode=HID_HS
+VP_USB_HOST_M7_VS_USB_HOST_HID_HS.Signal=USB_HOST_M7_VS_USB_HOST_HID_HS
 board=custom
