--- a/src/FlightComputer/FlightComputer.ioc
+++ b/src/FlightComputer/FlightComputer.ioc
@@ -210,13 +210,16 @@ NVIC1.ForceEnableDMAVector=true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC1.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC1.OTG_HS_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC1.OTG_FS_IRQn=true\:3\:0\:true\:false\:true\:false\:true
+NVIC1.OTG_HS_IRQn=true\:3\:0\:true\:false\:true\:true\:true
 NVIC1.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC1.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC1.SPI1_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC1.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC1.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC1.USART2_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC1.USART3_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -886,7 +889,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,8-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,9-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,10-MX_ADC3_Init-ADC3-false-HAL-true-CortexM7,11-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,12-MX_SPI4_Init-SPI4-false-HAL-true-CortexM7,13-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM7,14-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,15-MX_USB_HOST_Init-USB_HOST_M7-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,3-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,4-MX_USART2_UART_Init-USART2-true-HAL-false-CortexM4,5-MX_ADC3_Init-ADC3-true-HAL-false-CortexM4,6-MX_TIM2_Init-TIM2-false-HAL-true-CortexM4,7-MX_FMC_Init-FMC-true-HAL-false-CortexM4,8-MX_I2C2_Init-I2C2-true-HAL-false-CortexM4,9-MX_SPI4_Init-SPI4-true-HAL-false-CortexM4,1-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,8-MX_USB_DEVICE_Init-USB_DEVICE_M7-false-HAL-false-CortexM7,9-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,10-MX_ADC3_Init-ADC3-false-HAL-true-CortexM7,11-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,12-MX_SPI4_Init-SPI4-false-HAL-true-CortexM7,13-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM7,14-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,15-MX_USB_HOST_Init-USB_HOST_M7-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,3-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,4-MX_USART2_UART_Init-USART2-true-HAL-false-CortexM4,5-MX_ADC3_Init-ADC3-true-HAL-false-CortexM4,6-MX_TIM2_Init-TIM2-false-HAL-true-CortexM4,7-MX_FMC_Init-FMC-true-HAL-false-CortexM4,8-MX_I2C2_Init-I2C2-true-HAL-false-CortexM4,9-MX_SPI4_Init-SPI4-true-HAL-false-CortexM4,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_3_CYCLE
 QUADSPI.ClockPrescaler=5
 QUADSPI.FifoThreshold=1
