usb device/host

--- a/src/FlightComputer/FlightComputer.ioc
+++ b/src/FlightComputer/FlightComputer.ioc
@@ -101,7 +101,7 @@ Mcu.Pin12=PF4
 Mcu.Pin120=VP_SYS_VS_Systick
 Mcu.Pin121=VP_SYS_M4_VS_Systick
 Mcu.Pin122=VP_TIM2_VS_no_output1
-Mcu.Pin123=VP_USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS
+Mcu.Pin123=VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_FS
 Mcu.Pin124=VP_USB_HOST_M7_VS_USB_HOST_HID_HS
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
@@ -1093,19 +1093,10 @@ USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
-USB_DEVICE_M7.CLASS_NAME_FS=MSC
-USB_DEVICE_M7.CLASS_NAME_HS=CDC
-USB_DEVICE_M7.CONFIGURATION_STRING_MSC_FS=USD Config
-USB_DEVICE_M7.INTERFACE_STRING_MSC_FS=USD Interface
-USB_DEVICE_M7.IPParameters=VirtualMode-MSC_FS,VirtualModeFS,CLASS_NAME_FS,VirtualMode-CDC_HS,VirtualModeHS,CLASS_NAME_HS,MSC_MEDIA_PACKET-MSC_FS,MANUFACTURER_STRING-CDC_HS,PRODUCT_STRING_CDC_HS,PRODUCT_STRING_MSC_FS,CONFIGURATION_STRING_MSC_FS,INTERFACE_STRING_MSC_FS
-USB_DEVICE_M7.MANUFACTURER_STRING-CDC_HS=Notorious Rascal
-USB_DEVICE_M7.MSC_MEDIA_PACKET-MSC_FS=4096
-USB_DEVICE_M7.PRODUCT_STRING_CDC_HS=FC Virtual ComPort
-USB_DEVICE_M7.PRODUCT_STRING_MSC_FS=FC Mass Storage
-USB_DEVICE_M7.VirtualMode-CDC_HS=Cdc
-USB_DEVICE_M7.VirtualMode-MSC_FS=Msc
-USB_DEVICE_M7.VirtualModeFS=Msc_FS
-USB_DEVICE_M7.VirtualModeHS=Cdc_HS
+USB_DEVICE_M7.CLASS_NAME_FS=CDC
+USB_DEVICE_M7.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-CDC_FS
+USB_DEVICE_M7.VirtualMode-CDC_FS=Cdc
+USB_DEVICE_M7.VirtualModeFS=Cdc_FS
 USB_HOST.BSP.number=1
 USB_HOST0.BSP.STBoard=false
 USB_HOST0.BSP.api=Unknown
@@ -1134,8 +1125,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
-VP_USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS.Mode=MSC_FS
-VP_USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS.Signal=USB_DEVICE_M7_VS_USB_DEVICE_MSC_FS
+VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_M7_VS_USB_DEVICE_CDC_FS
 VP_USB_HOST_M7_VS_USB_HOST_HID_HS.Mode=HID_HS
 VP_USB_HOST_M7_VS_USB_HOST_HID_HS.Signal=USB_HOST_M7_VS_USB_HOST_HID_HS
 board=custom
